fix: main  horizontaly out of view && custom footer

--- a/app/app.css
+++ b/app/app.css
@@ -34,6 +34,7 @@ html {
 body {
   overflow-x: hidden;
   width: 100vw;
+  scroll-behavior: smooth;
 }
 nav {
   font-size: 1.5rem;
@@ -48,7 +49,6 @@ nav {
   text-decoration: none;
   outline: none;
   border: none;
-  scroll-behavior: smooth;
   font-size: 1.5rem;
   font-size: clamp(1rem, 4vw, 1.25rem);
 }
@@ -61,6 +61,7 @@ div {
 main {
   margin: 0 auto;
   width: 90vw;
+  overflow-x: hidden;
 }
 a {
   font-family: var(--font-content);
@@ -324,15 +325,37 @@ section#about-me::after {
 footer address ul {
   display: flex;
   justify-content: space-around;
-  padding-bottom: 15px;
+  width: 100vw;
+  height: 10vh;
+  max-height: 100px;
 }
 footer address a {
-  color: var(--text-gray);
-  border-bottom: var(--text-low-interactif) 3px solid;
-  transition: border-bottom 0.2s ease-out;
+  color: var(--text-interactif);
+  border-bottom: var(--text-interactif) 3px solid;
+  transition: all 0.2s ease-out;
+  line-height: max(100px, 10vh);
 }
 footer address a:hover {
-  border-color: var(--background-white);
+  border-color: var(--ui-bg-hover-jade);
+  background-color: var(--ui-bg-hover-jade);
+}
+
+footer ul li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--ui-boder-interactif-gray);
+  background-color: var(--ui-bg-gray);
+}
+
+footer ul li,
+footer ul li a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 740px) {
@@ -341,6 +364,9 @@ footer address a:hover {
   }
   input {
     width: 80vw;
+  }
+  section#about-me::after {
+    display: none;
   }
   main {
     margin: 0;
